Fixed font color for minicart count on mobile

--- a/webroot/skin/frontend/blueacorn/mis/scss/layout/_header-cart.scss
+++ b/webroot/skin/frontend/blueacorn/mis/scss/layout/_header-cart.scss
@@ -124,6 +124,9 @@
         }
         span.count {
             color: #84D7A3;
+            @include bp(max-width, 770px) {
+                color: $white;
+            }
         }
     }
 }
